[metadata]
name = image-render-actions-std-blender
version = attr: catharsys.plugins.std.blender.util.version.__version__

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    pyjson5

[options.packages.find]
where=src
exclude = dev

[options.package_data]
catharsys.plugins.std.blender = 
    scripts/*.py
    data/*.json5

[options.entry_points]
console_scripts =
    cath-blender = catharsys.plugins.std.blender.setup.cmd.main:RunCli

catharsys.commands =
    blender = catharsys.plugins.std.blender.setup.cmd.main

catharsys.commands.blender =
    show = catharsys.plugins.std.blender.setup.cmd.show
    init = catharsys.plugins.std.blender.setup.cmd.init
    install = catharsys.plugins.std.blender.setup.cmd.install
    debug = catharsys.plugins.std.blender.setup.cmd.debug

catharsys.action =
    /catharsys/action/std/blender/render/std:1.0 = catharsys.plugins.std.blender.actions.render_std
    /catharsys/action/std/blender/render/rs:1.0 = catharsys.plugins.std.blender.actions.render_rs
    /catharsys/action/std/blender/render/log:1.0 = catharsys.plugins.std.blender.actions.log_objects_std

catharsys.inspect.blender =
    extend_sys_path = catharsys.plugins.std.blender.data.inspect

catharsys.execute =
    /catharsys/exec/blender/std:2.1 = catharsys.plugins.std.blender.execute
    /catharsys/exec/blender/lsf:2.1 = catharsys.plugins.std.blender.execute

catharsys.projectclass =
    /catharsys/project-class/std/blender/render:1.0 = catharsys.plugins.std.blender.config.cls_render_project:CRenderProjectConfig

catharsys.blender.modify =
    /catharsys/blender/modify/object/set-origin:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:SetOrigin
    /catharsys/blender/modify/object/delta-rotation-euler:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:DeltaRotationEuler
    /catharsys/blender/modify/object/rotation-euler:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:RotationEuler
    /catharsys/blender/modify/object/delta-location:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:DeltaLocation
    /catharsys/blender/modify/object/location:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:Location
    /catharsys/blender/modify/object/delta-scale:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:DeltaScale
    /catharsys/blender/modify/object/scale:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:Scale
    /catharsys/blender/modify/object/scale-to-scene:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:ScaleToSceneUnit
    /catharsys/blender/modify/object/apply-transforms:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:ApplyTransforms
    /catharsys/blender/modify/object/snap-to-surf:1.0 = catharsys.plugins.std.blender.modify.func.object_transform:SnapObjToSurf
    /catharsys/blender/modify/object/randomize-mesh:1.0 = catharsys.plugins.std.blender.modify.func.object_mesh:RandomizeMesh
    /catharsys/blender/modify/object/voxel-remesh-bake-texture:1.0 = catharsys.plugins.std.blender.modify.func.object_mesh:VoxelRemeshBakeTexture
    /catharsys/blender/modify/object/select-nla-track:1.0 = catharsys.plugins.std.blender.modify.func.object_animate:SelectNlaTrack
    /catharsys/blender/modify/object/action:1.0 = catharsys.plugins.std.blender.modify.func.object_animate:ModifyAction
    /catharsys/blender/modify/object/action:2.0 = catharsys.plugins.std.blender.modify.func.object_animate:ModifyAction2
    /catharsys/blender/modify/object/enable:1.0 = catharsys.plugins.std.blender.modify.func.object_util:Enable
    /catharsys/blender/modify/object/enable-if/bound-box:1.0 = catharsys.plugins.std.blender.modify.func.object_util:EnableIfBoundBox
    /catharsys/blender/modify/object/set-follow-path-offset:1.0 = catharsys.plugins.std.blender.modify.func.object_util:SetFollowPathOffset
    /catharsys/blender/modify/object/parent:1.0 = catharsys.plugins.std.blender.modify.func.object_util:ParentToObject
    /catharsys/blender/modify/object/rename:1.0 = catharsys.plugins.std.blender.modify.func.object_util:RenameObject
    /catharsys/blender/modify/object/log:1.0 = catharsys.plugins.std.blender.modify.func.object_util:LogObject
    /catharsys/blender/modify/object/attributes:1.0 = catharsys.plugins.std.blender.modify.func.object_util:ModifyAttributes
    /catharsys/blender/modify/object/properties:1.0 = catharsys.plugins.std.blender.modify.func.object_util:ModifyProperties
    /catharsys/blender/modify/object/export/obj:1.0 = catharsys.plugins.std.blender.modify.func.object_util:ExportObjectObj
    /catharsys/blender/modify/object/armature/posing:1.0 = catharsys.plugins.std.blender.modify.func.armature_pose:Posing
    /catharsys/blender/modify/object/armature/bake-mesh:1.0 = catharsys.plugins.std.blender.modify.func.armature_mesh:BakeMesh
    /catharsys/blender/modify/object/rigidbody/add:1.0 = catharsys.plugins.std.blender.modify.func.object_rigidbody:Add

    /catharsys/blender/modify/nodegroup/node-values:1.0 = catharsys.plugins.std.blender.modify.func.ngrp_nodes:SetNodeValues

    /catharsys/blender/modify/material/textures-from-folder:1.0 = catharsys.plugins.std.blender.modify.func.material_std:SetTexturesFromFolder
    /catharsys/blender/modify/material/swap:1.0 = catharsys.plugins.std.blender.modify.func.material_std:SwapMaterial
    /catharsys/blender/modify/material/node-values:1.0 = catharsys.plugins.std.blender.modify.func.material_std:SetNodeValues

    /catharsys/blender/modify/collection/for-each-object:1.0 = catharsys.plugins.std.blender.modify.func.collection_std:ForEachObject
    /catharsys/blender/modify/collection/anytruth/labeltype:1.0 = catharsys.plugins.std.blender.modify.func.collection_std:SetCollectionLabel
    /catharsys/blender/modify/collection/object-placement/rnd-surf:1.0 = catharsys.plugins.std.blender.modify.func.collection_std:RndPlaceObjOnSurf
    /catharsys/blender/modify/collection/object-placement/rnd-surf:2.0 = catharsys.plugins.std.blender.modify.func.collection_std:RndPlaceObjOnSurf
    /catharsys/blender/modify/collection/move-object-to:1.0 = catharsys.plugins.std.blender.modify.func.collection_std:MoveObjectToCollection

    /catharsys/blender/modify/scene/world/hdri:1.1 = catharsys.plugins.std.blender.modify.func.scene_world:SetHdriWorld
    /catharsys/blender/modify/scene/world/set:1.0 = catharsys.plugins.std.blender.modify.func.scene_world:SetWorld
    /catharsys/blender/modify/scene/world/node-values:1.0 = catharsys.plugins.std.blender.modify.func.scene_world:SetWorldNodeValues
    /catharsys/blender/modify/scene/rigidbody/bake:1.0 = catharsys.plugins.std.blender.modify.func.scene_rigidbody:BakeWorld
    /catharsys/blender/modify/scene/rigidbody/clear:1.0 = catharsys.plugins.std.blender.modify.func.scene_rigidbody:ClearWorld

    /catharsys/blender/modify/evaluate/object/info:1.0 = catharsys.plugins.std.blender.modify.func.evaluators_std:ObjectInfo
    /catharsys/blender/modify/evaluate/look-at/rot-z:1.0 = catharsys.plugins.std.blender.modify.func.evaluators_std:LookAtRotZ
    /catharsys/blender/modify/evaluate/py/script:1.0 = catharsys.plugins.std.blender.modify.func.evaluators_std:RunPyScript
    
    /catharsys/blender/modify/nodegroup:1.0 = catharsys.plugins.std.blender.modify.nodegroups:ModifyNodeGroups
    /catharsys/blender/modify/material:1.0 = catharsys.plugins.std.blender.modify.materials:ModifyMaterials
    /catharsys/blender/modify/object:1.0 = catharsys.plugins.std.blender.modify.objects:ModifyObjects
    /catharsys/blender/modify/collection:1.0 = catharsys.plugins.std.blender.modify.collections:ModifyCollections
    /catharsys/blender/modify/scene:1.0 = catharsys.plugins.std.blender.modify.scenes:ModifyScenes
    /catharsys/blender/modify/evaluate:1.0 = catharsys.plugins.std.blender.modify.evaluate:Evaluate
    /catharsys/blender/modify/program:1.0 = catharsys.plugins.std.blender.modify.program:Execute

catharsys.blender.generate_class =
    /catharsys/blender/generate/in-program:1.0 = catharsys.plugins.std.blender.generate.generator_class:GenerateInProgram
    /catharsys/blender/generate/object/*:* = catharsys.plugins.std.blender.generate.generator_class:GenerateObject
    /catharsys/blender/generate/collection/*:* = catharsys.plugins.std.blender.generate.generator_class:GenerateCollection

catharsys.blender.generate =
    /catharsys/blender/generate/object/general:1.0 = catharsys.plugins.std.blender.generate.func.object_std:GenerateBlenderObject
    /catharsys/blender/generate/object/load:1.0 = catharsys.plugins.std.blender.generate.func.object_std:LoadObject
    /catharsys/blender/generate/object/import/obj:1.0 = catharsys.plugins.std.blender.generate.func.object_std:ImportObjectAny
    /catharsys/blender/generate/object/import/any:1.0 = catharsys.plugins.std.blender.generate.func.object_std:ImportObjectAny
    /catharsys/blender/generate/collection/load:1.0 = catharsys.plugins.std.blender.generate.func.collection_std:LoadCollections
    /catharsys/blender/generate/collection/create:1.0 = catharsys.plugins.std.blender.generate.func.collection_std:CreateCollections
    /catharsys/blender/generate/collection/import/folder-type-hierarchy:1.0 = catharsys.plugins.std.blender.generate.func.collection_std:ImportFolderTypeHierarchy

catharsys.blender.animate =
    /catharsys/blender/animate/object/rotate/const:1.0 = catharsys.plugins.std.blender.animate.func.object_transform:AnimRotConstRate
    /catharsys/blender/animate/object/translate/const:1.0 = catharsys.plugins.std.blender.animate.func.object_transform:AnimTranslateConstSpeed
